--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,10 +5,10 @@ env:
 
 rules:
   accessor-pairs:         2
-  array-bracket-spacing:  [ 2, "always", { "singleValue": true, "objectsInArrays": true, "arraysInArrays": true } ]
+  array-bracket-spacing:  2
   block-scoped-var:       2
   block-spacing:          2
-  brace-style:            [ 2, '1tbs', { allowSingleLine: true } ]
+  brace-style:            [ 2, 'stroustrup', { allowSingleLine: true } ]
   # Postponed
   #callback-return:        2
   comma-dangle:           2
